--- a/carrosel.css
+++ b/carrosel.css
@@ -5,27 +5,27 @@
 }
 
 
-#home-section-carrosel{
+/* #home-section-carrosel{
     width: 100vw;
     height: 400px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: aqua;
-}
+} */
 
 .slider{
-    width: 300px;
-    height: 320px;
+    width: 90vw;
+    height: 400px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: aqua;    
+    background-color: aqua; 
 }
 
 .slick-slide img{
     width: 300px;
-    height: 320px;
+    height: 300px;
 }
 
 .slick-slide{
