--- a/home.css
+++ b/home.css
@@ -3,6 +3,125 @@
     margin: 0;
 }
 
+
+input[type="text"] {
+    padding: 10px;
+    background-color: #fff;
+    font: 12px Lucida, Verdana, sans-serif;
+    color: #999;
+    border: #ddd 1px solid;
+    border-radius: 3px;
+    background: #fff url(https://cdn1.iconfinder.com/data/icons/bijou/10/Search.png) no-repeat 90% center;
+    border-radius: 55px;
+}
+
+input {
+-webkit-writing-mode: horizontal-tb !important;
+text-rendering: auto;
+color: initial;
+letter-spacing: normal;
+word-spacing: normal;
+text-transform: none;
+text-indent: 0px;
+text-shadow: none;
+display: inline-block;
+text-align: start;
+-webkit-appearance: textfield;
+background-color: white;
+-webkit-rtl-ordering: logical;
+cursor: text;
+margin: 0em;
+border-radius: 55px;
+}
+
+a{
+    text-decoration: none;
+}
+
+/* ======== botoes do projeto */
+
+.btn {
+    -ms-transform: translate(-50%, -50%);
+    background-color: #f1f1f1;
+    color: black;
+    font-size: 16px;
+    padding: 16px 30px;
+    border: none;
+    cursor: pointer;
+    border-radius: 35px;
+    text-align: center;
+  }
+
+  
+  .btn:hover {
+    background-color: black;
+    color: white;
+  }
+
+  .buttonMobile1 {
+    -ms-transform: translate(-50%, -50%);
+    background-color: #f15c2e;
+    color: #fff;
+    font-size: 16px;
+    padding: 14px 26px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    margin: 3px;
+  }
+
+  .buttonMobile1 a {
+    color: #fff
+  }
+
+  .buttonMobile2 a {
+    color: #fff
+  }
+
+  
+  .buttonMobile1:hover {
+    background-color: rgb(151, 9, 151);
+    color: white;
+  }
+
+  .buttonMobile2 {
+    -ms-transform: translate(-50%, -50%);
+    background-color: #136d80;
+    color: #fff;
+    font-size: 16px;
+    padding: 14px 26px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    margin: 3px;
+  }
+
+  
+  .buttonMobile2:hover {
+    background-color: rgb(230, 27, 27);
+    color: white;
+  }
+
+
+  .btnEvento{
+    -ms-transform: translate(-50%, -50%);
+    background-color: #f1f1f1;
+    color: black;
+    font-size: 16px;
+    padding: 5px 5px;
+    border: none;
+    cursor: pointer;
+    border-radius: 35px;
+    text-align: center; 
+  }
+
+  .btnEvento:hover {
+    background-color: black;
+    color: white;
+  }
+
+  /* ======== botoes do projeto */
+
 body{
     background-color: #fff;
     overflow-x: hidden;
@@ -45,14 +164,16 @@ ul.topnav {
     width:100%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 	}
 
 	/* Coloca os itens da lista do Menu lado a lado, e flutua os itens para a esquerda */
 	ul.topnav li {
-				display: flex;
+		display: flex;
 				/* margin-left: 0.5em; */
-				font-size: 0.9em;
+		font-size: 0.9em;
         float:left;
+    
 	}
 
 	/* Estilo dos links dentro da lista */
@@ -126,7 +247,7 @@ ul.topnav {
             background-color: #fff;
         }
         
-        .home-corpo-buscar {
+        /* .home-corpo-buscar {
             height: 50px;
             width: 55vw;
             display: flex;
@@ -134,7 +255,7 @@ ul.topnav {
             align-items: center;
             background-color: #fff;
             border-radius: 55px;
-        }
+        } */
         
         .home-box-icones-bucsar {
             height: 50px;
@@ -145,26 +266,6 @@ ul.topnav {
             margin-right: 35px;
         }
         
-        .home-linha-divisao {
-            -webkit-transform: rotate(90deg);
-            /* Safari and Chrome */
-            -moz-transform: rotate(90deg);
-            /* Firefox */
-            -ms-transform: rotate(90deg);
-            /* IE 9 */
-            -o-transform: rotate(90deg);
-            /* Opera */
-            transform: rotate(90deg);
-        }
-        
-        .home-buscar-img {
-            height: 25px;
-            width: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-left: 15px;
-        }
         
         .home-input {
             height: 35px;
@@ -211,11 +312,15 @@ ul.topnav {
         .home-button-crie-evento-header1{
             justify-content: center;
             align-items: center;
+            display: flex;
+            height: 70px;
+            width: 125px;
         }
 
         .home-button-crie-evento-header2{
             justify-content: center;
             align-items: center;
+            display: flex;
         }
         
         .home-button-crieEvento{
@@ -266,7 +371,7 @@ destaque  */
 #home-section-destaque {
     width: 99vw;
     height: 900px;
-    background-color: aqua;
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -305,7 +410,7 @@ destaque  */
 #home-section-carrosel{
     width: 90vw;
     height: 680px;
-    background-color: blue;
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -313,8 +418,18 @@ destaque  */
 
 /* ========= css carrousel  */
 
+.slider{
+    width: 100vw;
+    height: 400px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #fff; 
+}
+
 .slick-slide img{
-    width: 100%;
+    width: 300px;
+    height: 320px;
 }
 
 .slick-slide{
@@ -346,7 +461,7 @@ beneficios */
 #home-section-beneficios {
     width: 99vw;
     height: 2000px;
-    background-color: red;
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -361,6 +476,7 @@ beneficios */
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 40px;
 }
 
 .home-texto-h2-beneficios {
@@ -394,9 +510,9 @@ beneficios */
 beneficios imagem 1*/
 
 #home-section-img1-beneficios {
-    width: 80vw;
+    width: 100vw;
     height: 900px;
-    background-color: #ff4040;
+    background-color: #f15c2e;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -405,7 +521,7 @@ beneficios imagem 1*/
 #home-box-img1-beneficios {
     width: 100vw;
     height: 900px;
-    background-color: #ff2020;
+    background-color: #f15c2e;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -414,7 +530,7 @@ beneficios imagem 1*/
 .home-box-img1-beneficios {
     width: 80vw;
     height: 600px;
-    background-color: blue;
+    background-color: transparent;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -424,7 +540,7 @@ beneficios imagem 1*/
 .home-caixa-img1-beneficios {
     width: 400px;
     height: 400px;
-    background-color: green;
+    background-color: #797979;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -453,20 +569,26 @@ beneficios imagem 1*/
 .home-box-texto-beneficios-img1 {
     width: 80vw;
     height: 300px;
-    background-color: green;
+    background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    transition-delay: 4s;
+    transition-duration: 4s;
 }
 
 .home-box-texto-p1-beneficios {
-    width: 400px;
+    width: 600px;
     height: 300px;
-    background-color: #ff4040;
+    background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+    margin: 10px;
+    border-radius: 20px;
+
 }
 
 
@@ -475,9 +597,9 @@ beneficios imagem 1*/
 beneficios imagem 2*/
 
 #home-section-img2-beneficios {
-    width: 80vw;
+    width: 100vw;
     height: 900px;
-    background-color: orange;
+    background-color: #fff;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -487,7 +609,7 @@ beneficios imagem 2*/
 #home-box-img2-beneficios {
     width: 100vw;
     height: 900px;
-    background-color: #ff2020;
+    background-color: #fff;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -496,7 +618,7 @@ beneficios imagem 2*/
 .home-box-img2-beneficios {
     width: 80vw;
     height: 600px;
-    background-color: blue;
+    background-color:transparent;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -506,7 +628,7 @@ beneficios imagem 2*/
 .home-caixa-img2-beneficios {
     width: 400px;
     height: 400px;
-    background-color: green;
+    background-color: #797979;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -535,7 +657,7 @@ beneficios imagem 2*/
 .home-box-texto-beneficios-img2 {
     width: 80vw;
     height: 300px;
-    background-color: green;
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -543,12 +665,15 @@ beneficios imagem 2*/
 }
 
 .home-box-texto-p2-beneficios {
-    width: 400px;
+    width: 600px;
     height: 300px;
-    background-color: #ff4040;
+    background-color: #f15c2e;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+    margin: 10px;
+    border-radius: 20px;
 }
 
 
@@ -562,7 +687,7 @@ beneficios imagem 2*/
 #home-section-contador {
     width: 100vw;
     height: 400px;
-    background-color: blue;
+    background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -578,7 +703,7 @@ beneficios imagem 2*/
 .home-section-box-contador {
     width: 100vw;
     height: 250px;
-    background-color: rgba(255, 255, 255, 0.342);
+    background-color: rgba(255, 255, 255, 0.233);
     display: flex;
     justify-content: space-around;
     position: absolute;
@@ -594,27 +719,27 @@ beneficios imagem 2*/
     justify-content: space-around;
     align-items: center;
     position: absolute;
-    margin-top: -70px;
+    /* margin-top: -70px; */
 }
 
 .home-contador-icone-img1 {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
 }
 
 .home-contador-icone-img2 {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
 }
 
 .home-contador-icone-img3 {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
 }
 
 .home-contador-icone-img4 {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
 }
 
 .home-contador-numeros {
@@ -691,8 +816,8 @@ beneficios imagem 2*/
 
 #home-section-mobile {
     width: 99vw;
-    height: 800px;
-    background-color: aqua;
+    height: 900px;
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -702,7 +827,7 @@ beneficios imagem 2*/
 .home-section-mobile-texto {
     width: 80vw;
     height: 200px;
-    background-color: red;
+    background-color:transparent;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -711,8 +836,8 @@ beneficios imagem 2*/
 
 .home-section-mobile-texto-p-button1 {
     width: 35vw;
-    height: 40px;
-    background-color: red;
+    height: 70px;
+    background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -720,11 +845,12 @@ beneficios imagem 2*/
 
 .home-section-mobile-texto-p-button2 {
     width: 35vw;
-    height: 40px;
-    background-color: red;
+    height: 90px;
+    background-color: transparent;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
+    margin-bottom: 70px;
 }
 
 .home-section-mobile-box {
@@ -744,18 +870,19 @@ beneficios imagem 2*/
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-left: 90px;
+    /* margin-left: 230px; */
 }
 
 .home-section-mobile-box-texto-p {
-    width: 450px;
-    height: 400px;
+    width: 600px;
+    height: 300px;
+    background-color: #f15c2e;
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    flex-direction: column;
-    border: 1px solid black;
-    border-radius: 30PX;
+    justify-content: center;
+    text-align: center;
+   margin-left: -300px;
+    border-radius: 20px;
 }
 
 .home-section-mobile-box-p{
@@ -772,7 +899,7 @@ beneficios imagem 2*/
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: -60px;
+    margin: 0 0 20px 120px;
 }
 
 .home-section-mobile-button-final{
@@ -791,7 +918,7 @@ footer */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ff2020;
+    background-color: #7899ae;
     flex-direction: column;
 }
 
@@ -802,17 +929,17 @@ footer */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: green;
+    background-color: #7899ae;
     flex-direction: column;
 }
 
 .home-footer-titulo{
-    width: 100vw;
+    width: 85vw;
     height: 100px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    background-color: red; 
+    background-color: #7899ae;
 }
 
 .home-footer-informacao{
@@ -821,7 +948,7 @@ footer */
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: yellow; 
+    background-color: #7899ae;
 }
 
 .home-footer-suaConta{
@@ -830,7 +957,7 @@ footer */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: red;   
+    background-color: #7899ae;   
     flex-direction: column;
 }
 
@@ -840,7 +967,7 @@ footer */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: red;   
+    background-color: #7899ae;  
     flex-direction: column;
 }
 
@@ -850,7 +977,7 @@ footer */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: red;   
+    background-color: #7899ae; 
 
 }
 
@@ -860,7 +987,7 @@ footer */
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: blue; 
+    background-color: #407da3; 
 
 }
 
@@ -870,7 +997,7 @@ footer */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: red; 
+    background-color: #407da3; 
 }
 
 .home-footer-nomeEventos{
@@ -879,7 +1006,13 @@ footer */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: green; 
+    background-color: #407da3; 
+    flex-direction: column; 
+}
+
+.home-logoarte-footer{
+    width: 190px;
+    height: 80px;
 }
 
 .home-footer-direitoReservado{
@@ -888,5 +1021,5 @@ footer */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: yellow; 
+    background-color: #407da3; 
 }
